fix secondary line overflows

--- a/frontend/src/assets/styles/global.css
+++ b/frontend/src/assets/styles/global.css
@@ -26,7 +26,7 @@ body {
   border-radius: 20px;
   margin: 80px auto;
   padding: 24px;
-  width: 70%;
+  width: 85%;
 }
 
 .rsprd-container__item:first-child {
